# mandelbrot

./: Cargo.toml
src/: README.md  lib.rs  mandelbrot.rs
