[package]
name = "koch"
version = "0.1.0"
authors = ["Andrew Hoetker <andrew@hoetker.engineer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.21", features = ["serde-serialize"] }
rayon = "1.3"