[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Andrew Hoetker <andrew@hoetker.engineer>"]
edition = "2018"
description = "Rust library for generating images of the Mandelbrot set."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21"

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
rayon = { version = "1.3" }