[package]
name = "mandelbrot_common"
version = "0.1.0"
authors = ["Andrew Hoetker <ahoetker@me.com>"]
edition = "2018"
description = "Rust library for generating images of the Mandelbrot set."
license = "MIT"
repository = "https://github.com/ahoetker/mandelbrot"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
num-complex = "0.2"

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
rayon = { version = "1.3" }